# ArchEngine

./: CMakeLists.txt  CMakePresets.json  README.md
AnimationTesting/: CMakeLists.txt  main.cpp
AnimationTesting/Entities/: Entity_Archer.h  Entity_BasicModel.h  Entity_Box.h  Entity_TPCamera.h  PhysicsObject.h
Engine/: CMakeLists.txt
Engine/Resources/Models/CesiumMan/normalized/: normalized.mesh
Engine/Resources/Models/CheckerBox/: Cube.gltf  Cube.mesh  Cube.mtl
Engine/Resources/Models/Helmet/: FlightHelmet.mesh
Engine/Resources/Models/archer/: ErikaArcher.dae
Engine/Resources/Models/barrel/: barrel.mesh
Engine/Resources/Models/chair/: license.txt  scene.gltf
Engine/Resources/Models/duck/: duck.mesh
Engine/Resources/Models/mario_2/: mario_2.mesh
Engine/Resources/Models/robot/: ElyByKAtienza.dae  HipHopDancing.dae  Idle.dae  Walking.dae
Engine/Shaders/: debug.frag  debug.vert  forward.frag  forward.vert  shadow.vert  skybox.frag  skybox.vert
Engine/Shaders/common/: buffers.glslh  resources.glslh
Engine/Source/: ArchEngine.h  ArchPch.cpp  ArchPch.h
Engine/Source/ArchEngine/AssetManager/: Asset.h  AssetExtensions.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetManagerBase.h  AssetManagerEditor.cpp  AssetManagerEditor.h  AssetManagerRuntime.cpp  AssetManagerRuntime.h  AssetMetadata.h
Engine/Source/ArchEngine/AssetManager/Serializers/: AssetSerializer.h  AssetSerializer_Mesh.cpp  AssetSerializer_Mesh.h  AssetSerializer_Texture.cpp  AssetSerializer_Texture.h
Engine/Source/ArchEngine/Core/: Application.cpp  Application.h  EntryPoint.h  Input.cpp  Input.h  Memory.h  Window.cpp  Window.h
Engine/Source/ArchEngine/GUI/: DebugOverlay.h
Engine/Source/ArchEngine/Grapichs/: Animation.h  Animator.cpp  Animator.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  DescriptorManager.cpp  DescriptorManager.h  Enviroment.cpp  Enviroment.h  Framebuffer.cpp  Framebuffer.h  FreeCamera.cpp  FreeCamera.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  RenderAPI.cpp  RenderAPI.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderTypes.h  Skeleton.h  (+8 more)
Engine/Source/ArchEngine/Objects/: Entity.cpp  Entity.h  EntityFactory.h  Entity_Camera.h  Entity_DirectionalLight.h  Entity_PhysicsObject.h  Entity_Skybox.h
Engine/Source/ArchEngine/Physics/: PhysicsDebugRenderer.h  PhysicsEngine.cpp  PhysicsEngine.h
Engine/Source/ArchEngine/Scene/: Scene.cpp  Scene.h  ScenePhysics.cpp  ScenePhysics.h  SceneRenderer.cpp  SceneRenderer.h  SceneSerializer.cpp  SceneSerializer.h
Engine/Source/ArchEngine/Utilities/: Bitmap.h  DataBuffer.h  Defines.h  EctCubemap.h  Flags.h  Logger.h  Math.h  Profiler.h  ShaderCompiler.cpp  ShaderCompiler.h  UUID.cpp  UUID.h
FPS/: CMakeLists.txt  main.cpp
FPS/Common/: Defines.h
FPS/Resources/Models/Arms/: FP_Arms.skmesh  FP_Arms_Idle.dae  FP_Arms_RifleWalk.dae
GrapichsAndGameplayTesting/: CMakeLists.txt  main.cpp
GrapichsAndGameplayTesting/Entities/: BasicObject.h  EntityProp_Chair.h  EntityProp_Table.h  Entity_Box.h
Sandbox/: BasicObject.h  CMakeLists.txt  PhysicsObject.h  PropObject.h  Rat.h  main.cpp
Sandbox/Entities/: EntityProp_Chair.h  EntityProp_Table.h  Entity_BasicModel.h  Entity_Mario.h  Entity_Rat.h  PhysicsObject.h
Source/: ArchEngine.cpp  ArchEngine.h  main.cpp
Source/Core/: Application.cpp  Application.h  Window.cpp  Window.h
TPS/: CMakeLists.txt  main.cpp
TPS/Entities/: Entity_Cube.h  Entity_Player.h
TPS/Resources/Models/Arms/: FP_Arms.skmesh
